# sudoku-editor

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: jobs.yml  lint.yml
solver/: Cargo.toml
solver/.cargo/: config.toml
solver/src/: lib.rs  puzzle.rs  solver.rs
solver/util/: emcc
src/: App.tsx  editor.css  editor.tsx  events.ts  history.ts  penpaExporter.ts  puzzle.ts  rule.tsx  serialize.ts  solver.d.ts  solver.js  zlib.d.ts  zlib.js
src/components/: NumberKeypad.tsx  tooltipButton.tsx
src/dialogs/: dialog.tsx  exportDialog.tsx  helpDialog.tsx  loadDialog.tsx  newBoardDialog.tsx  saveDialog.tsx
src/i18n/: configs.ts  en.json  ja.json
src/rules/: answer.tsx  antiKnight.tsx  arrow.tsx  blocks.tsx  cellNumbers.tsx  consecutive.tsx  diagonal.tsx  extraRegions.tsx  forbiddenCandidates.tsx  givenNumbers.tsx  killer.tsx  linesUtil.ts  noTouch.tsx  nonConsecutive.tsx  oddEven.tsx  outsideUtil.ts  palindrome.tsx  regionsUtil.ts  regionsUtil.tsx  rules.tsx  skyscrapers.tsx  thermo.tsx  xSums.tsx  xv.tsx
src/test/: README.md  exporter.test.ts  react-setup.test.tsx  serialize.test.ts  setup.test.ts
