[package]
name = "sudoku_variants_solver"
version = "0.1.0"
edition = "2021"

[lib]
name = "sudoku_variants_solver"
crate-type = ["cdylib", "lib"]

[dependencies]
cspuz_rs = { path = "../../cspuz_core/cspuz_rs", default-features = false }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
